# LLM

./: .gitignore  .gitmodules  README.md  bpe_tokenizer.json  pyproject.toml
Transformer/: a.py  embedding.py
copy/: tokenizer.py
rust_bpe/: Cargo.toml  tokenizer.json
rust_bpe/src/: lib.rs  main.rs
src/Transformer/: README.md  attention.py  decoder.py  embedding.py  encoder.py  positional_encoding.py  tokenizer.py  train.py  transformer.py  vocab.py
src/huggingface/: BPETokenizer.py  cn_tokenizer.json  en_tokenizer.json
src/my_transformer/: _1_tokenizer.py  _2_embedding.py  _3_positional_encoding.py  _4_attention.py  _5_encoder.py  _6_decoder.py  _7_transformer.py  _8_train.py  tokenizer.py
src/my_transformer/test/: download_data.py  run.py  test_tokenizer.py  test_train.py  train.py
src/my_transformer/test/checkpoints/: src_tokenizer.json  tgt_tokenizer.json
src/naive_bayes/: 01_theory.py  02_gaussian_nb.py  03_multinomial_nb.py  04_text_classification.py  Building Naive Bayes Classifier.md  README.md  __init__.py
src/rewrite_transformer/: attention.py  dataset.py  decoder.py  embedding.py  encoder.py  positional_encoding.py  test.py  tmp.py  tokenizer.json  tokenizer.py  train.py  transformer.py  util.py
src/utils/: logger.py  np.py
